# pretix-ldap-auth

./: .gitignore  pyproject.toml
pretix_ldap_auth/: __init__.py  _version.py  backend.py
