[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[project]
name = "pretix-ldap-auth"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "ldap3 ~= 2.9",
]
authors = [
    { name = "Maximilian Haye", email = "maxh@freitagsrunde.org" }
]
dynamic = ["version"]
keywords = ["pretix", "ldap"]

[project.urls]
repository = "https://github.com/freitagsrunde/pretix-ldap-auth"

[project.optional-dependencies]
dev = ["types-ldap3 ~= 2.9"]
pretix = ["pretix ~= 4.12"]

[project.entry-points."pretix.plugin"]
pretix_ldap_auth = "pretix_ldap_auth:PretixPluginMeta"

[tool.pdm]
version = { source = "file", path = "pretix_ldap_auth/_version.py" }
